Migration for bids table, add policy for users and bids + fix for auth logic in l5-swagger
