# app/Http/Resources/Bid/BidResource.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Resources\Bid;
 
+use App\Http\Resources\User\UserResource;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 class BidResource extends JsonResource
@@ -22,6 +23,7 @@ class BidResource extends JsonResource
             'comment' => $this->comment,
             'created_at' => $this->created_at?->toDateTimeString(),
             'updated_at' => $this->updated_at?->toDateTimeString(),
+            'created_by' => new UserResource($this->whenLoaded('user')),
         ];
     }
 }
